--- a/src/main/resources/assets/balefulherbs/lang/en_us.json
+++ b/src/main/resources/assets/balefulherbs/lang/en_us.json
@@ -1,13 +1,18 @@
 {
   "item.balefulherbs.mewstone": "Mewstone",
   "item.balefulherbs.maostone": "Maostone",
+
   "item.balefulherbs.idonite": "Idonite",
+  "item.balefulherbs.idonite_powder": "Idonite Powder",
+  "item.balefulherbs.refined_idonite": "Refined Idonite",
 
   "item.balefulherbs.silver_speedberry": "Silver Speedberry",
   "item.balefulherbs.silver_speedberry_powder": "Silver Speedberry Powder",
+  "item.balefulherbs.refined_silver_speedberry": "Refined Silver Speedberry",
   "item.balefulherbs.silver_speedberry_seeds": "Silver Speedberry Seeds",
   "item.balefulherbs.kemp": "Kemp",
   "item.balefulherbs.kemp_powder": "Kemp Powder",
+  "item.balefulherbs.refined_kemp": "Refined Kemp",
   "item.balefulherbs.kemp_seeds": "Kemp Seeds",
 
 
@@ -15,6 +20,7 @@
   "block.balefulherbs.deepslate_idonite_ore": "Deepslate Idonite Ore",
   "block.balefulherbs.idonite_block": "Block of Idonite",
   "block.balefulherbs.herb_pulveriser": "Herb Pulveriser",
+  "block.balefulherbs.herb_shaper": "Herb Shaper",
 
   "entity.minecraft.villager.balefulherbs.outcast": "Outcast",
 
