Improving README and refactoring some PlayerCrave functions

--- a/src/main/resources/assets/balefulherbs/lang/en_us.json
+++ b/src/main/resources/assets/balefulherbs/lang/en_us.json
@@ -25,6 +25,8 @@
   "entity.minecraft.villager.balefulherbs.outcast": "Outcast",
 
   "tooltip.balefulherbs.silver_speedberry.tooltip": "Speeds you up!",
+  "tooltip.balefulherbs.herb_pulveriser.tooltip": "Crushes herbs",
+  "tooltip.balefulherbs.herb_shaper.tooltip": "Refines crushed herbs",
 
   "creativetab.balefulherbs_tab": "Baleful Herbs & Spices"
 }
